--- a/public/assets/style/main.css
+++ b/public/assets/style/main.css
@@ -1,11 +1,13 @@
 body {
     margin: auto;
     font-size: 20px;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
 }
 
 
 header {
-    background-color: lightskyblue;
+    background-color: #b0aac0 ;
     padding: 10px;
     display: flex;
     flex-direction: column;
@@ -25,7 +27,7 @@ main {
 }
 
 footer {
-    background-color: lightskyblue;
+    background-color: #b0aac0 ;
     padding: 5px;
     margin: 10px 0 0;
     text-align: center;
@@ -35,6 +37,7 @@ nav a {
     display: inline-block;
     margin: 3px;
     padding: 10px;
+    color: #fff5f1;
     border-bottom: 1px solid transparent;
     text-decoration: none;
 }
@@ -48,7 +51,6 @@ nav a:hover {
 .main-title {
     text-align: center;
     color: rgba(36, 7, 7, 0.685);
-    font-family: Arial, Helvetica, sans-serif;
 }
 
 
@@ -88,24 +90,24 @@ nav a:hover {
 }
 
 .bug-preview {
-    background-color: #333;
+    background-color: #b0aac0;
     color: whitesmoke;
     border-radius: .2em;
     margin: 5px;
     text-align: center;
     padding: 5px;
+    
 }
 
 .bug-preview a {
-    color: lightskyblue;
+    color: #e4d1d1 ;
 }
 
 .bug-preview span {
     color: gold;
 }
 
-.info-actions {
-}
+.info-actions {}
 
 .container {
     padding-inline: 8rem;
