--- a/public/assets/style/main.css
+++ b/public/assets/style/main.css
@@ -1,8 +1,11 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
     margin: auto;
     font-size: 20px;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-
 }
 
 
@@ -112,3 +115,4 @@ nav a:hover {
 .container {
     padding-inline: 8rem;
 }
+
